# ChangeLog for net-libs/libssh
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libssh/ChangeLog,v 1.132 2015/05/19 07:24:59 ago Exp $

  19 May 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.5.ebuild:
  Stable for x86, wrt bug #548564

  15 May 2015; Pacho Ramos <pacho@gentoo.org> libssh-0.6.5.ebuild:
  ppc stable wrt bug #548564

*libssh-0.7.0 (13 May 2015)

  13 May 2015; Lars Wendler <polynomial-c@gentoo.org> +libssh-0.7.0.ebuild:
  Version bump.

  13 May 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.5.ebuild:
  Stable for amd64, wrt bug #548564

  08 May 2015; Jeroen Roovers <jer@gentoo.org> libssh-0.6.5.ebuild:
  Stable for PPC64 (bug #548564).

  08 May 2015; Jeroen Roovers <jer@gentoo.org> libssh-0.6.5.ebuild:
  Stable for HPPA (bug #548564).

*libssh-0.6.5 (07 May 2015)

  07 May 2015; Lars Wendler <polynomial-c@gentoo.org> +libssh-0.6.5.ebuild:
  Security bump (bug #548564).

  02 Apr 2015; Jeroen Roovers <jer@gentoo.org> libssh-0.6.4.ebuild:
  Stable for HPPA (bug #538798).

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> libssh-0.6.4.ebuild:
  add arm64 support, tested on A53 board

  18 Feb 2015; Jeroen Roovers <jer@gentoo.org> -libssh-0.6.3.ebuild,
  -libssh-0.6.3-r1.ebuild:
  Old.

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.4.ebuild:
  Stable for ppc64, wrt bug #533366

  31 Jan 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.4.ebuild:
  Stable for ppc, wrt bug #533366

  16 Jan 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.4.ebuild:
  Stable for x86, wrt bug #533366

  16 Jan 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.4.ebuild:
  Stable for amd64, wrt bug #533366

  30 Dec 2014; Lars Wendler <polynomial-c@gentoo.org> libssh-0.6.4.ebuild:
  Fixed compilation with libgcrypt (bug #533424).

*libssh-0.6.4 (23 Dec 2014)

  23 Dec 2014; Jeroen Roovers <jer@gentoo.org> +libssh-0.6.4.ebuild:
  Version bump (bug #533366).
