@@ -2,31 +2,18 @@
 Hash: SHA256
 
 AUX libssh-0.5.0-tests.patch 446 SHA256 d23cf31e1fe6c0e1b1ee31f88a74b1a02386d75ab72063a39fea8c467dfc3383 SHA512 e751ac1c3749ecbd8ee2f960ad09e861763cbdb9bccc7c95ae27ca4768e8c9ae5ab55342151a2799f8f937e63a8729bff6f04cec166bb9830b99f8f690da4825 WHIRLPOOL 55031d07f02fe43f32391ae20e78b5a689df342e96d0feb2a03f674251b743ae502955e9d1e93539ca4f25f2eb151d8d02fb594e509978356c4bae90fcdca695
-DIST libssh-0.6.4-libgcrypt_build_fix.patch 1660 SHA256 729e6c4aeacb0c066906b320c426b624b3f437b456969e1830d367800016c304 SHA512 90d4d371463ef6a0669fe363c2750fa1320586b14e1dcaf1d7e6789d2e2732fc8dcbe70c11b4a81675c443c30465e6a7b056a40192ff6245f59308bab760b216 WHIRLPOOL 6ee0dce20b262a758b921483151f12fc483c8370c4eeb2c99c6fd94a44a55a54af997a3ab4dfad99ab714a6d6602392843e0bdb5383180d2d84a947a457a88eb
-DIST libssh-0.6.4.tar.gz 381835 SHA256 7e3205e2e95bf35b23b83a6485a7d59abe7c7546d01b728f691cf0c374216b52 SHA512 02c1879d7afed9cc8404366c343ea770e97fcdcc7cc467f15b762b2c5724399de3efe69fdf6ee86a607c0f4d2337586f34150b9e0dcc8ccd8e86de79f574cba5 WHIRLPOOL e086afbe604905bdc024a1ce7503644285fdb394a168b6049e44751c64cdf51ba9e036a32f568d749252ad537fe9f874eadb8aea92de580f9c93a9d91a6ef457
 DIST libssh-0.6.5-compilefix.patch 668 SHA256 90eb8bd3e31c4df5a5aa40d4e0d440c290190be8524396c979dc2fe5005c9b61 SHA512 8ade351e6499922bc983cfb1b7042a8eca4322b64a5fd1eb9d4afc0baba311f0af970dc3f43b864d510d3a4668f58e83e6214a6e90ddbf4199ab9fea6c73d036 WHIRLPOOL d65f3505eae97feb16f5b0cdfc83a6638dcdca2916facedd05b9987797b72231725c0834355048e48bc38413ad1b9c718cfbdad410fbd13573b38c919ccbac0b
 DIST libssh-0.6.5.tar.xz 281564 SHA256 0fd52763e033d5e9b1cd55f60a74e619731c5ba630938eec95682dbe4cf7dc2c SHA512 55d614ff311a29a20b93094ac1dd16a2ad1345368b874a0e385f0c235e8defde8816948ab04eab68ade477a0a6901b317c7884df1ba3078cf12db89dfc4169cc WHIRLPOOL 9801eee45a178306b0645d75c268df381d206a8c566695d8b6c228ea7f5638a313bdbdf990ad7bd299c24d280595007b44fd16449ee3a0643b6e2084bb148d09
 DIST libssh-0.7.0.tar.xz 349548 SHA256 0551bc341f33641ddc349b31730b3010870ad26a4dbfad3d090a1738fe3e402b SHA512 2ef897f7295d2b4ba63f0d797c51ba2c8cb7d8569152d34ec982d2b88adccc97c8f2aabea3bbc88b72421256d3d0be661f82bbcf5c4b151018b5a695be445568 WHIRLPOOL 1337ca1fc69c5de60f2d33ce1d66f04b0d2807b01794af6787a5d4b7ca84715afe00ff72d8b1bb21590186b7af9058fa90c69af865a0534402735076dec51397
-EBUILD libssh-0.6.4.ebuild 2552 SHA256 5a8d965fa9ec78752c52e7c62ca5e13f1dde595de790b7a237aed78d16aca429 SHA512 801347ae58bb73e755676ca031c8419cc8ba3a46bafcfe253631f5144ee3d8005c990d8cd92fdff54edb4f64a5ceca84e161f3a0edee6a8f39d663874ab8cd20 WHIRLPOOL d099722b1aeda44f98b0f04117e73c49751d74441d4cc5911ca38cac6fd6e953cfd6c1b2cfe6ba2aeef634a16b49486c96383486c92ece5a5e47f8e7ac82be11
 EBUILD libssh-0.6.5.ebuild 2535 SHA256 35c4c09465fa047ba6803ba8afdc57e855a46afc4e3578b74b41cc5e3688b089 SHA512 697257e875f6d42a3b89349e98284ab118702ca581562164b2c6f25f94233943595dd304d31882a851a20ef90e5ca55bb1204d35bedfbb85760b6b3929850be3 WHIRLPOOL bddcbf4c5c3b5d33a437922aca3a445e52a5ae04d8a0b43879d51944bbe13b3eed69de4896f0b4755c6c7e0d6b8f3de00d5842e5784fd8d3876ba643c5833aca
 EBUILD libssh-0.7.0.ebuild 2386 SHA256 51f8e8b017354a87af247031777f138aabb7d3abcad19e51e1f43de3c20cae6e SHA512 c5a9c91e6b6e693dd1cc35f2bcb4731ce6db5798198c746db9b9c780d40d01a9f3d1c3201dacd147395e8424847ae3ce5d90a56cf2eac2960e94e553b26bfa0e WHIRLPOOL 64abd0ce0c32df88d672a6e79dbc0f7c4b0c313732c707f028225be79dace483bffae27ff37938e8c2172f2026b55664ca1e29296a5361937fae98a3d33051df
 EBUILD libssh-9999.ebuild 2165 SHA256 19217cf4a65823f37239ed541e83e6ec8ded43668fe7bb6bdb0fe3900de22009 SHA512 92222628c3851d025bc645ced70092687af28c1f264621d3ac230e87d4b2269f8e09838f1cafd53191457fbab4b8e683914f25213c46dd673e012d2c36d23665 WHIRLPOOL c2dd2212aaef30e06abec149f8e4cc661998feb89c4eeafad6b67ea37ccce597e907fd1bcd02a9d27dca8febf0eeaf9c5c4edaa81f6566c2603131f52e13edbf
-MISC ChangeLog 17976 SHA256 1eba07d5870addf3c4709fa73c0a32d9cf9fd8df3f1f16e037902ffc8a232d7a SHA512 de6484051ec99728717d095ea1bc51bef68713fe5fc42e6f2c8f1574c9d274221c5ad1b17c7b02a44e9c3a6cd44af97b76ea4ae0a3c8b43cb39ddd382ce707a6 WHIRLPOOL 87cd3fe355fb983f74cea46f61cd3fc78ad3b9ebc42792129c7ac8becb4bf44f36500f8914cdfe3d156ec3d1dd0fc90ba04651231069ab897d100ce66d2b84e1
+MISC ChangeLog 18053 SHA256 992885403322d53cc454ed87a64eee49e47250554c261838ec9ed0d0d902ee7e SHA512 2921d93826d500ef03fd53866f813d7d79e18682515fffd04fa70a22126a77db23842c5d63efd9af911a83a69ba71ebb1c4ef99712692a4fa4a996f5a351db31 WHIRLPOOL 68a79ba46ad5acaa7203884a74decb9066bfdb2f4890af5549866962f6f7fe7a070f81303892d93bce7dc3c4311a4a53de4426a6c6a971f56d2bab53d23a672e
 MISC metadata.xml 577 SHA256 fe4b1a79301454baa0772dd181ad10ea5f835a904d1eb71c94890bd276891116 SHA512 dcd1badfa0be8068167dd095631366e968046fba7e5f62851f2f7c463ba8c8af427ec487abff41c236f269fdfd376f5716e4ffa4a5042f2ab82bc5bdb85b21e6 WHIRLPOOL e9731fd1b62a2d0d5836420585f8a31f11bb6f5e3ff12d9853ccb66321dd63642bddb1f128e117ebd1f7f58209f17a98f14c8b7e9c1e1b091c6ab668595ac524
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVWuVLAAoJELp701BxlEWfpQwP/1JaC7eUDglECih2AJwke0K3
-6v3o1hL+hfskO/qgbl+mayrOHMm6IsOkGNNO5YCOZ6I8DwU1AVySWVxvwZQBbEsw
-YXZmtVcI250yhboUMifquqOZrbMPQTstBGwqca/hi7tieZUqHa1NhL1l/TrFPygL
-LcCZDO8Sdf0h8vHhdBAwQYu36XHX5ogJqHpfQXBIQlTRnz9So3uqgeg7hIflJabS
-rZiluc1P3FAaW/ljK0VtGRuPBTWWQhPhPhMfkaHJXGDVpn1L+0KIcE3w6WA5vrIw
-q9UWxdaR9JheA+Uyj6EOKHYHEb8OTJorevqS3ADF2T+XZy161KXHD9nCVoaR1Oq6
-PPDZCOhEAdjhaF1RuVVHYJZ40JFLjUHlMMCrOnUfY6jdNHZL5IUcraAknEop3EAo
-/Mqajb23/CkIAQCIsDUnrBFjRl++GO3nmhU5JY46n6+egcP1+8eFD98MkwJUtw+g
-GfxOS05kSH0dS7d+s1dka2UTHxd64EDahk0BLRS6mw61swJE9Rr5A+//oD0jG8lo
-0RyvBdB4Kqq+1f0QFEGV+cat3TXaDe1xzbLddw2hoHuFdFuuVXexT+iM4WUHvpkY
-FSnxi2Q9Re1m7npp/gNGczIgMBXIbYnHUlRragXlFOuvP48TkqVwW7aCUzhn4XQL
-qlxyWe70HIEaFlvN04aB
-=1Yww
+iEYEAREIAAYFAlVbX5UACgkQVWmRsqeSphMrRwCfZBuetLKsENxCqRrvsxOffDtR
+eVEAn3Y4rCXe/SZMpZMypxhR0VqejUgJ
+=dlpb
 -----END PGP SIGNATURE-----
